--- a/environment.yml
+++ b/environment.yml
@@ -11,22 +11,31 @@ dependencies:
   - brotlipy=0.7.0
   - ca-certificates=2020.12.5
   - certifi=2020.12.5
-  - cffi=1.14.4
+  - cffi=1.14.5
   - chardet=4.0.0
   - click=7.1.2
-  - cryptography=3.4.4
+  - cryptography=3.4.6
   - cycler=0.10.0
   - daiquiri=3.0.0
-  - dataclasses=0.7
+  - dataclasses=0.8
+  - dbus=1.13.6
   - dnspython=2.0.0
   - dominate=2.4.0
   - email-validator=1.1.2
   - email_validator=1.1.2
+  - expat=2.2.10
   - flask=1.1.2
   - flask-bootstrap=3.3.7.1
   - flask-login=0.5.0
   - flask-wtf=0.14.3
+  - fontconfig=2.13.1
   - freetype=2.10.4
+  - gettext=0.19.8.1
+  - glib=2.68.0
+  - glib-tools=2.68.0
+  - greenlet=1.0.0
+  - gst-plugins-base=1.18.4
+  - gstreamer=1.18.4
   - icu=68.1
   - idna=2.10
   - iniconfig=1.1.1
@@ -41,77 +50,98 @@ dependencies:
   - ldap3=2.8.1
   - libblas=3.9.0
   - libcblas=3.9.0
+  - libclang=11.1.0
   - libedit=3.1.20191231
+  - libevent=2.1.10
   - libffi=3.3
   - libgcc-ng=9.3.0
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
+  - libglib=2.68.0
   - libgomp=9.3.0
   - libiconv=1.16
   - liblapack=3.9.0
+  - libllvm11=11.1.0
   - libopenblas=0.3.12
   - libpng=1.6.37
-  - libpq=12.3
+  - libpq=13.1
   - libsodium=1.0.18
   - libstdcxx-ng=9.3.0
   - libtiff=4.2.0
+  - libuuid=2.32.1
   - libwebp-base=1.2.0
+  - libxcb=1.13
+  - libxkbcommon=1.0.3
   - libxml2=2.9.10
   - libxslt=1.1.33
   - lxml=4.6.2
   - lz4-c=1.9.3
   - markupsafe=1.1.1
-  - matplotlib=3.3.1
-  - matplotlib-base=3.3.1
+  - matplotlib=3.3.4
+  - matplotlib-base=3.3.4
   - more-itertools=8.7.0
   - mypy_extensions=0.4.3
+  - mysql-common=8.0.23
+  - mysql-libs=8.0.23
   - ncurses=6.2
+  - nspr=4.30
+  - nss=3.63
   - numpy=1.20.1
   - olefile=0.46
-  - openssl=1.1.1i
+  - openssl=1.1.1j
   - packaging=20.9
   - pathspec=0.8.1
   - pcre=8.44
   - pendulum=2.1.2
-  - pillow=8.1.0
+  - pillow=8.1.2
   - pip=21.0.1
   - pluggy=0.13.1
   - psycopg2=2.8.6
+  - pthread-stubs=0.4
   - py=1.10.0
   - pyasn1=0.4.8
   - pycparser=2.20
   - pynacl=1.4.0
   - pyopenssl=20.0.1
   - pyparsing=2.4.7
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
   - pysocks=1.7.1
   - pytest=6.2.2
-  - python=3.8.6
+  - python=3.8.8
   - python-dateutil=2.8.1
   - python-json-logger=2.0.1
   - python_abi=3.8
   - pytzdata=2020.1
+  - qt=5.12.9
   - readline=8.0
-  - regex=2020.11.13
+  - regex=2021.3.17
   - requests=2.25.1
   - setuptools=49.6.0
   - six=1.15.0
-  - sqlalchemy=1.3.23
+  - sqlalchemy=1.4.1
   - sqlite=3.34.0
   - tk=8.6.10
   - toml=0.10.2
   - tornado=6.1
   - typed-ast=1.4.2
   - typing_extensions=3.7.4.3
-  - urllib3=1.26.3
+  - urllib3=1.26.4
   - uwsgi=2.0.19.1
   - visitor=0.1.3
   - werkzeug=1.0.1
   - wheel=0.36.2
   - wtforms=2.3.2
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
   - xz=5.2.5
   - yaml=0.2.5
   - zlib=1.2.11
-  - zstd=1.4.8
+  - zstd=1.4.9
   - pip:
     - install==1.3.3
+    - pastaplus-soh==2021.1.15
 prefix: /home/servilla/anaconda3/envs/dashboard
