--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ attrs==20.3.0
 black==20.8b1
 brotlipy==0.7.0
 certifi==2020.12.5
-cffi==1.14.4
+cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
-cryptography==3.4.4
+cryptography==3.4.6
 cycler==0.10.0
 daiquiri==3.0.0
 dnspython==2.0.0
@@ -16,6 +16,7 @@ Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
+greenlet==1.0.0
 idna==2.10
 iniconfig==1.1.1
 install==1.3.3
@@ -25,7 +26,7 @@ kiwisolver==1.3.1
 ldap3==2.8.1
 lxml==4.6.2
 MarkupSafe==1.1.1
-matplotlib==3.3.1
+matplotlib==3.3.4
 more-itertools==8.7.0
 mypy-extensions==0.4.3
 numpy==1.20.1
@@ -34,7 +35,7 @@ packaging==20.9
 pastaplus.soh==2021.1.15
 pathspec==0.8.1
 pendulum==2.1.2
-Pillow==8.1.0
+Pillow==8.1.2
 pip==21.0.1
 pluggy==0.13.1
 psycopg2==2.8.6
@@ -44,22 +45,26 @@ pycparser==2.20
 PyNaCl==1.4.0
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
+PyQt5==5.12.3
+PyQt5-sip==4.19.18
+PyQtChart==5.12
+PyQtWebEngine==5.12.1
 PySocks==1.7.1
 pytest==6.2.2
 python-dateutil==2.8.1
 python-json-logger==2.0.1
 pytzdata==2020.1
-regex==2020.11.13
+regex==2021.3.17
 requests==2.25.1
 setuptools==49.6.0.post20210108
 six==1.15.0
 sniffer==2020.8.4
-SQLAlchemy==1.3.23
+SQLAlchemy==1.4.1
 toml==0.10.2
 tornado==6.1
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
-urllib3==1.26.3
+urllib3==1.26.4
 uWSGI==2.0.19.1
 visitor==0.1.3
 Werkzeug==1.0.1
