--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
-cryptography==3.4.6
+cryptography==3.4.7
 cycler==0.10.0
 daiquiri==3.0.0
 dnspython==2.0.0
@@ -24,14 +24,15 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 kiwisolver==1.3.1
 ldap3==2.8.1
-lxml==4.6.2
+lxml==4.6.3
 MarkupSafe==1.1.1
-matplotlib==3.3.4
+matplotlib==3.4.1
 more-itertools==8.7.0
 mypy-extensions==0.4.3
-numpy==1.20.1
+numpy==1.20.2
 olefile==0.46
 packaging==20.9
+pastaplus.soh==2021.1.15
 pathspec==0.8.1
 pendulum==2.1.2
 Pillow==8.1.2
@@ -58,7 +59,7 @@ requests==2.25.1
 setuptools==49.6.0.post20210108
 six==1.15.0
 sniffer==2020.8.4
-SQLAlchemy==1.4.1
+SQLAlchemy==1.4.4
 toml==0.10.2
 tornado==6.1
 typed-ast==1.4.2
