--- a/environment.yml
+++ b/environment.yml
@@ -5,96 +5,104 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - alsa-lib=1.2.3
   - appdirs=1.4.4
-  - attrs=20.3.0
-  - black=20.8b1
+  - attrs=21.2.0
+  - black=21.5b2
   - brotlipy=0.7.0
   - ca-certificates=2021.5.30
   - certifi=2021.5.30
   - cffi=1.14.5
   - chardet=4.0.0
-  - click=7.1.2
+  - click=8.0.1
   - cryptography=3.4.7
   - cycler=0.10.0
   - daiquiri=3.0.0
   - dataclasses=0.8
   - dbus=1.13.6
-  - dnspython=2.0.0
-  - dominate=2.4.0
-  - email-validator=1.1.2
-  - email_validator=1.1.2
-  - expat=2.3.0
-  - flask=1.1.2
+  - dnspython=2.1.0
+  - dominate=2.6.0
+  - email-validator=1.1.3
+  - email_validator=1.1.3
+  - expat=2.4.1
+  - flask=2.0.1
   - flask-bootstrap=3.3.7.1
   - flask-login=0.5.0
-  - flask-wtf=0.14.3
+  - flask-wtf=0.15.1
   - fontconfig=2.13.1
   - freetype=2.10.4
   - gettext=0.19.8.1
-  - glib=2.68.0
-  - glib-tools=2.68.0
-  - greenlet=1.0.0
+  - glib=2.68.3
+  - glib-tools=2.68.3
+  - greenlet=1.1.0
   - gst-plugins-base=1.18.4
   - gstreamer=1.18.4
   - icu=68.1
   - idna=2.10
   - iniconfig=1.1.1
-  - itsdangerous=1.1.0
+  - itsdangerous=2.0.1
   - jansson=2.13.1
-  - jinja2=2.11.3
+  - jbig=2.1
+  - jinja2=3.0.1
   - jpeg=9d
   - kiwisolver=1.3.1
-  - krb5=1.17.2
+  - krb5=1.19.1
   - lcms2=2.12
   - ld_impl_linux-64=2.35.1
   - ldap3=2.8.1
+  - lerc=2.2.1
   - libblas=3.9.0
   - libcblas=3.9.0
   - libclang=11.1.0
+  - libdeflate=1.7
   - libedit=3.1.20191231
   - libevent=2.1.10
   - libffi=3.3
   - libgcc-ng=9.3.0
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
-  - libglib=2.68.0
+  - libglib=2.68.3
   - libgomp=9.3.0
   - libiconv=1.16
   - liblapack=3.9.0
   - libllvm11=11.1.0
-  - libopenblas=0.3.12
+  - libogg=1.3.4
+  - libopenblas=0.3.15
+  - libopus=1.3.1
   - libpng=1.6.37
-  - libpq=13.1
+  - libpq=13.3
   - libsodium=1.0.18
   - libstdcxx-ng=9.3.0
-  - libtiff=4.2.0
+  - libtiff=4.3.0
   - libuuid=2.32.1
+  - libvorbis=1.3.7
   - libwebp-base=1.2.0
   - libxcb=1.13
   - libxkbcommon=1.0.3
-  - libxml2=2.9.10
+  - libxml2=2.9.12
   - libxslt=1.1.33
   - lxml=4.6.3
   - lz4-c=1.9.3
-  - markupsafe=1.1.1
-  - matplotlib=3.4.1
-  - matplotlib-base=3.4.1
-  - more-itertools=8.7.0
+  - markupsafe=2.0.1
+  - matplotlib=3.4.2
+  - matplotlib-base=3.4.2
+  - more-itertools=8.8.0
   - mypy_extensions=0.4.3
-  - mysql-common=8.0.23
-  - mysql-libs=8.0.23
+  - mysql-common=8.0.25
+  - mysql-libs=8.0.25
   - ncurses=6.2
   - nspr=4.30
-  - nss=3.63
-  - numpy=1.20.2
+  - nss=3.67
+  - numpy=1.20.3
   - olefile=0.46
+  - openjpeg=2.4.0
   - openssl=1.1.1k
   - packaging=20.9
   - pathspec=0.8.1
   - pcre=8.44
   - pendulum=2.1.2
-  - pillow=8.1.2
-  - pip=21.0.1
+  - pillow=8.2.0
+  - pip=21.1.2
   - pluggy=0.13.1
   - psycopg2=2.8.6
   - pthread-stubs=0.4
@@ -110,29 +118,29 @@ dependencies:
   - pyqtchart=5.12
   - pyqtwebengine=5.12.1
   - pysocks=1.7.1
-  - pytest=6.2.2
-  - python=3.8.8
+  - pytest=6.2.4
+  - python=3.8.10
   - python-dateutil=2.8.1
   - python-json-logger=2.0.1
   - python_abi=3.8
   - pytzdata=2020.1
   - qt=5.12.9
-  - readline=8.0
-  - regex=2021.3.17
+  - readline=8.1
+  - regex=2021.4.4
   - requests=2.25.1
   - setuptools=49.6.0
-  - six=1.15.0
-  - sqlalchemy=1.4.4
-  - sqlite=3.35.3
+  - six=1.16.0
+  - sqlalchemy=1.4.18
+  - sqlite=3.35.5
   - tk=8.6.10
   - toml=0.10.2
   - tornado=6.1
-  - typed-ast=1.4.2
-  - typing_extensions=3.7.4.3
+  - typed-ast=1.4.3
+  - typing_extensions=3.10.0.0
   - urllib3=1.26.5
   - uwsgi=2.0.19.1
   - visitor=0.1.3
-  - werkzeug=1.0.1
+  - werkzeug=2.0.1
   - wheel=0.36.2
   - wtforms=2.3.2
   - xorg-libxau=1.0.9
@@ -140,7 +148,8 @@ dependencies:
   - xz=5.2.5
   - yaml=0.2.5
   - zlib=1.2.11
-  - zstd=1.4.9
+  - zstd=1.5.0
   - pip:
     - install==1.3.3
+    - pastaplus-soh==2021.5.20
 prefix: /home/servilla/anaconda3/envs/dashboard
