--- a/environment.yml
+++ b/environment.yml
@@ -6,152 +6,161 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.3
-  - attrs=21.2.0
-  - black=21.8b0
+  - argon2-cffi=21.3.0
+  - argon2-cffi-bindings=21.2.0
+  - attrs=21.4.0
+  - bcrypt=3.2.0
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
   - brotlipy=0.7.0
-  - ca-certificates=2021.5.30
-  - certifi=2021.5.30
-  - cffi=1.14.6
-  - chardet=4.0.0
-  - charset-normalizer=2.0.0
-  - click=8.0.1
-  - cryptography=3.4.7
-  - cycler=0.10.0
+  - ca-certificates=2021.10.8
+  - certifi=2021.10.8
+  - cffi=1.15.0
+  - charset-normalizer=2.0.12
+  - click=8.0.4
+  - cryptography=36.0.1
+  - cycler=0.11.0
   - daiquiri=3.0.0
-  - dataclasses=0.8
   - dbus=1.13.6
-  - dnspython=2.1.0
+  - dnspython=2.2.1
   - dominate=2.6.0
   - email-validator=1.1.3
   - email_validator=1.1.3
-  - expat=2.4.1
-  - flask=2.0.1
+  - expat=2.4.7
+  - flask=2.0.3
   - flask-bootstrap=3.3.7.1
   - flask-login=0.5.0
-  - flask-wtf=0.15.1
-  - fontconfig=2.13.1
+  - flask-wtf=1.0.0
+  - flit-core=3.7.1
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.13.96
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.30.0
   - freetype=2.10.4
   - gettext=0.19.8.1
-  - glib=2.68.4
-  - glib-tools=2.68.4
-  - greenlet=1.1.1
-  - gst-plugins-base=1.18.4
-  - gstreamer=1.18.4
-  - icu=68.1
-  - idna=3.1
+  - giflib=5.2.1
+  - greenlet=1.1.2
+  - gst-plugins-base=1.18.5
+  - gstreamer=1.18.5
+  - icu=69.1
+  - idna=3.3
   - iniconfig=1.1.1
-  - itsdangerous=2.0.1
-  - jansson=2.13.1
+  - itsdangerous=2.1.1
+  - jansson=2.14
   - jbig=2.1
-  - jinja2=3.0.1
-  - jpeg=9d
+  - jinja2=3.0.3
+  - jpeg=9e
+  - keyutils=1.6.1
   - kiwisolver=1.3.2
   - krb5=1.19.2
   - lcms2=2.12
   - ld_impl_linux-64=2.36.1
   - ldap3=2.9.1
-  - lerc=2.2.1
+  - lerc=3.0
   - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
   - libcblas=3.9.0
-  - libclang=11.1.0
-  - libdeflate=1.7
+  - libclang=13.0.1
+  - libdeflate=1.10
   - libedit=3.1.20191231
   - libevent=2.1.10
-  - libffi=3.3
-  - libgcc-ng=11.1.0
-  - libgfortran-ng=11.1.0
-  - libgfortran5=11.1.0
-  - libglib=2.68.4
-  - libgomp=11.1.0
+  - libffi=3.4.2
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libglib=2.70.2
+  - libgomp=11.2.0
   - libiconv=1.16
   - liblapack=3.9.0
-  - libllvm11=11.1.0
+  - libllvm13=13.0.1
+  - libnsl=2.0.0
   - libogg=1.3.4
-  - libopenblas=0.3.17
+  - libopenblas=0.3.18
   - libopus=1.3.1
   - libpng=1.6.37
-  - libpq=13.3
+  - libpq=14.2
   - libsodium=1.0.18
-  - libstdcxx-ng=11.1.0
+  - libstdcxx-ng=11.2.0
   - libtiff=4.3.0
   - libuuid=2.32.1
   - libvorbis=1.3.7
-  - libwebp-base=1.2.1
+  - libwebp=1.2.2
+  - libwebp-base=1.2.2
   - libxcb=1.13
   - libxkbcommon=1.0.3
   - libxml2=2.9.12
   - libxslt=1.1.33
-  - lxml=4.6.3
+  - libzlib=1.2.11
+  - lxml=4.8.0
   - lz4-c=1.9.3
-  - markupsafe=2.0.1
-  - matplotlib=3.4.3
-  - matplotlib-base=3.4.3
-  - more-itertools=8.9.0
-  - mypy_extensions=0.4.3
-  - mysql-common=8.0.25
-  - mysql-libs=8.0.25
-  - ncurses=6.2
-  - nspr=4.30
-  - nss=3.69
-  - numpy=1.21.2
-  - olefile=0.46
+  - markupsafe=2.1.0
+  - matplotlib=3.5.1
+  - matplotlib-base=3.5.1
+  - munkres=1.1.4
+  - mysql-common=8.0.28
+  - mysql-libs=8.0.28
+  - ncurses=6.3
+  - nspr=4.32
+  - nss=3.74
+  - numpy=1.22.3
   - openjpeg=2.4.0
   - openssl=1.1.1l
-  - packaging=21.0
-  - pathspec=0.9.0
+  - packaging=21.3
+  - passlib=1.7.4
   - pcre=8.45
   - pendulum=2.1.2
-  - pillow=8.3.2
-  - pip=21.2.4
-  - platformdirs=2.3.0
-  - pluggy=0.13.1
-  - psycopg2=2.9.1
+  - pillow=9.0.1
+  - pip=22.0.4
+  - pluggy=1.0.0
+  - psycopg2=2.9.3
   - pthread-stubs=0.4
-  - py=1.10.0
+  - py=1.11.0
   - pyasn1=0.4.8
-  - pycparser=2.20
-  - pynacl=1.4.0
-  - pyopenssl=20.0.1
-  - pyparsing=2.4.7
+  - pycparser=2.21
+  - pynacl=1.5.0
+  - pyopenssl=22.0.0
+  - pyparsing=3.0.7
   - pyqt=5.12.3
   - pyqt-impl=5.12.3
   - pyqt5-sip=4.19.18
   - pyqtchart=5.12
   - pyqtwebengine=5.12.1
   - pysocks=1.7.1
-  - pytest=6.2.5
-  - python=3.8.10
+  - pytest=7.0.1
+  - python=3.8.12
   - python-dateutil=2.8.2
   - python-json-logger=2.0.1
   - python_abi=3.8
   - pytzdata=2020.1
   - qt=5.12.9
   - readline=8.1
-  - regex=2021.8.28
-  - requests=2.26.0
-  - setuptools=58.0.3
+  - requests=2.27.1
+  - setuptools=60.9.3
   - six=1.16.0
-  - sqlalchemy=1.4.23
-  - sqlite=3.36.0
-  - tk=8.6.11
-  - toml=0.10.2
-  - tomli=1.2.1
+  - sqlalchemy=1.4.32
+  - sqlite=3.37.0
+  - tk=8.6.12
+  - tomli=2.0.1
   - tornado=6.1
-  - typed-ast=1.4.3
-  - typing-extensions=3.10.0.0
-  - typing_extensions=3.10.0.0
-  - urllib3=1.26.6
-  - uwsgi=2.0.19.1
+  - unicodedata2=14.0.0
+  - urllib3=1.26.8
+  - uwsgi=2.0.20
   - visitor=0.1.3
-  - werkzeug=2.0.1
-  - wheel=0.37.0
-  - wtforms=2.3.2
+  - werkzeug=2.0.3
+  - wheel=0.37.1
+  - wtforms=3.0.1
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xz=5.2.5
   - yaml=0.2.5
   - zlib=1.2.11
-  - zstd=1.5.0
+  - zstd=1.5.2
   - pip:
     - install==1.3.3
     - pastaplus-soh==2021.5.20
