--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,71 @@
-attrs==21.2.0
-black==21.8b0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+attrs==21.4.0
+bcrypt==3.2.0
 brotlipy==0.7.0
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-charset-normalizer==2.0.0
-click==8.0.1
-cryptography==3.4.7
-cycler==0.10.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.0.4
+cryptography==36.0.1
+cycler==0.11.0
 daiquiri==3.0.0
-dataclasses==0.8
-dnspython==2.1.0
+dnspython==2.2.1
 dominate==2.6.0
 email-validator==1.1.3
-Flask==2.0.1
+Flask==2.0.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.5.0
-Flask-WTF==0.15.1
-greenlet==1.1.1
-idna==3.1
+Flask-WTF==1.0.0
+flit_core==3.7.1
+fonttools==4.30.0
+greenlet==1.1.2
+idna==3.3
 iniconfig==1.1.1
 install==1.3.3
-itsdangerous==2.0.1
-Jinja2==3.0.1
+itsdangerous==2.1.1
+Jinja2==3.0.3
 kiwisolver==1.3.2
 ldap3==2.9.1
-lxml==4.6.3
-MarkupSafe==2.0.1
-matplotlib==3.4.3
-more-itertools==8.9.0
-mypy-extensions==0.4.3
-numpy==1.21.2
-olefile==0.46
-packaging==21.0
+lxml==4.8.0
+MarkupSafe==2.1.0
+matplotlib==3.5.1
+munkres==1.1.4
+numpy==1.22.3
+packaging==21.3
+passlib==1.7.4
 pastaplus.soh==2021.5.20
-pathspec==0.9.0
 pendulum==2.1.2
-Pillow==8.3.2
-pip==21.2.4
-platformdirs==2.3.0
-pluggy==0.13.1
-psycopg2==2.9.1
-py==1.10.0
+Pillow==9.0.1
+pip==22.0.4
+pluggy==1.0.0
+psycopg2==2.9.3
+py==1.11.0
 pyasn1==0.4.8
-pycparser==2.20
-PyNaCl==1.4.0
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
+pycparser==2.21
+PyNaCl==1.5.0
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
 PyQt5==5.12.3
 PyQt5_sip==4.19.18
 PyQtChart==5.12
 PyQtWebEngine==5.12.1
 PySocks==1.7.1
-pytest==6.2.5
+pytest==7.0.1
 python-dateutil==2.8.2
 python-json-logger==2.0.1
 pytzdata==2020.1
-regex==2021.8.28
-requests==2.26.0
-setuptools==58.0.3
+requests==2.27.1
+setuptools==60.9.3
 six==1.16.0
 sniffer==2020.8.4
-SQLAlchemy==1.4.23
-toml==0.10.2
-tomli==1.2.1
+SQLAlchemy==1.4.32
+tomli==2.0.1
 tornado==6.1
-typed-ast==1.4.3
-typing-extensions==3.10.0.0
-urllib3==1.26.6
-uWSGI==2.0.19.1
+unicodedata2==14.0.0
+urllib3==1.26.8
+uWSGI==2.0.20
 visitor==0.1.3
-Werkzeug==2.0.1
-wheel==0.37.0
-WTForms==2.3.2
+Werkzeug==2.0.3
+wheel==0.37.1
+WTForms==3.0.1
