--- a/environment.yml
+++ b/environment.yml
@@ -7,13 +7,14 @@ dependencies:
   - _openmp_mutex=4.5
   - alsa-lib=1.2.8
   - attr=2.5.1
+  - blinker=1.6.2
   - brotli=1.0.9
   - brotli-bin=1.0.9
   - brotlipy=0.7.0
   - bzip2=1.0.8
-  - ca-certificates=2022.12.7
+  - ca-certificates=2023.5.7
   - cairo=1.16.0
-  - certifi=2022.12.7
+  - certifi=2023.5.7
   - cffi=1.15.1
   - charset-normalizer=3.1.0
   - click=8.1.3
@@ -29,7 +30,7 @@ dependencies:
   - email_validator=1.3.1
   - exceptiongroup=1.1.1
   - expat=2.5.0
-  - flask=2.2.3
+  - flask=2.3.2
   - flask-bootstrap=3.3.7.1
   - flask-login=0.6.2
   - flask-wtf=1.1.1
@@ -90,7 +91,7 @@ dependencies:
   - libiconv=1.17
   - libjpeg-turbo=2.1.5.1
   - liblapack=3.9.0
-  - libllvm16=16.0.2
+  - libllvm16=16.0.3
   - libnsl=2.0.0
   - libogg=1.3.4
   - libopenblas=0.3.21
@@ -162,12 +163,12 @@ dependencies:
   - tk=8.6.12
   - toml=0.10.2
   - tomli=2.0.1
-  - tornado=6.3
+  - tornado=6.3.2
   - tzdata=2023c
   - urllib3=1.26.15
   - uwsgi=2.0.21
   - visitor=0.1.3
-  - werkzeug=2.3.0
+  - werkzeug=2.3.3
   - wheel=0.40.0
   - wtforms=3.0.1
   - xcb-util=0.4.0
