--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+blinker==1.6.2
 brotlipy==0.7.0
-certifi==2022.12.7
+certifi==2023.5.7
 cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
@@ -12,7 +13,7 @@ dnspython==2.3.0
 dominate==2.7.0
 email-validator==1.3.1
 exceptiongroup==1.1.1
-Flask==2.2.3
+Flask==2.3.2
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.2
 Flask-WTF==1.1.1
@@ -58,11 +59,11 @@ sniffer==2020.8.4
 SQLAlchemy==1.4.46
 toml==0.10.2
 tomli==2.0.1
-tornado==6.3
+tornado==6.3.2
 urllib3==1.26.15
 uWSGI==2.0.21
 visitor==0.1.3
-Werkzeug==2.3.0
+Werkzeug==2.3.3
 wheel==0.40.0
 WTForms==3.0.1
 zipp==3.15.0
