--- a/environment.yml
+++ b/environment.yml
@@ -6,29 +6,30 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.8
+  - anyio=3.7.1
   - attr=2.5.1
   - blinker=1.6.2
   - brotli=1.0.9
   - brotli-bin=1.0.9
-  - brotlipy=0.7.0
+  - brotli-python=1.0.9
   - bzip2=1.0.8
-  - ca-certificates=2023.5.7
+  - ca-certificates=2023.7.22
   - cairo=1.16.0
-  - certifi=2023.5.7
+  - certifi=2023.7.22
   - cffi=1.15.1
-  - charset-normalizer=3.1.0
-  - click=8.1.3
+  - charset-normalizer=3.2.0
+  - click=8.1.7
   - colorama=0.4.6
-  - contourpy=1.0.7
-  - cryptography=40.0.2
+  - contourpy=1.1.0
+  - cryptography=41.0.3
   - cycler=0.11.0
   - daiquiri=3.0.0
   - dbus=1.13.6
-  - dnspython=2.3.0
-  - dominate=2.7.0
-  - email-validator=1.3.1
-  - email_validator=1.3.1
-  - exceptiongroup=1.1.1
+  - dnspython=2.4.2
+  - dominate=2.8.0
+  - email-validator=2.0.0.post2
+  - email_validator=2.0.0.post2
+  - exceptiongroup=1.1.3
   - expat=2.5.0
   - flask=2.3.2
   - flask-bootstrap=3.3.7.1
@@ -41,19 +42,24 @@ dependencies:
   - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.39.3
+  - fonttools=4.42.1
   - freetype=2.12.1
   - gettext=0.21.1
-  - glib=2.76.2
-  - glib-tools=2.76.2
+  - glib=2.76.4
+  - glib-tools=2.76.4
   - graphite2=1.3.13
   - greenlet=2.0.2
   - gst-plugins-base=1.22.0
   - gstreamer=1.22.0
+  - h11=0.14.0
+  - h2=4.1.0
   - harfbuzz=6.0.0
+  - hpack=4.0.0
+  - httpcore=0.17.3
+  - hyperframe=6.0.1
   - icu=72.1
   - idna=3.4
-  - importlib-metadata=6.6.0
+  - importlib-metadata=6.8.0
   - iniconfig=2.0.0
   - itsdangerous=2.1.2
   - jansson=2.14
@@ -70,7 +76,7 @@ dependencies:
   - libbrotlicommon=1.0.9
   - libbrotlidec=1.0.9
   - libbrotlienc=1.0.9
-  - libcap=2.67
+  - libcap=2.69
   - libcblas=3.9.0
   - libclang=16.0.2
   - libclang13=16.0.2
@@ -80,33 +86,33 @@ dependencies:
   - libevent=2.1.10
   - libexpat=2.5.0
   - libffi=3.4.2
-  - libflac=1.4.2
-  - libgcc-ng=12.2.0
+  - libflac=1.4.3
+  - libgcc-ng=13.1.0
   - libgcrypt=1.10.1
-  - libgfortran-ng=12.2.0
-  - libgfortran5=12.2.0
-  - libglib=2.76.2
-  - libgomp=12.2.0
-  - libgpg-error=1.46
+  - libgfortran-ng=13.1.0
+  - libgfortran5=13.1.0
+  - libglib=2.76.4
+  - libgomp=13.1.0
+  - libgpg-error=1.47
   - libiconv=1.17
   - libjpeg-turbo=2.1.5.1
   - liblapack=3.9.0
   - libllvm16=16.0.3
   - libnsl=2.0.0
   - libogg=1.3.4
-  - libopenblas=0.3.21
+  - libopenblas=0.3.23
   - libopus=1.3.1
   - libpng=1.6.39
   - libpq=15.2
-  - libsndfile=1.2.0
+  - libsndfile=1.2.2
   - libsodium=1.0.18
-  - libsqlite=3.40.0
-  - libstdcxx-ng=12.2.0
-  - libsystemd0=253
-  - libtiff=4.5.0
+  - libsqlite=3.42.0
+  - libstdcxx-ng=13.1.0
+  - libsystemd0=254
+  - libtiff=4.5.1
   - libuuid=2.38.1
   - libvorbis=1.3.7
-  - libwebp-base=1.3.0
+  - libwebp-base=1.3.1
   - libxcb=1.13
   - libxkbcommon=1.5.0
   - libxml2=2.10.4
@@ -114,27 +120,27 @@ dependencies:
   - libzlib=1.2.13
   - lxml=4.9.2
   - lz4-c=1.9.4
-  - markupsafe=2.1.2
-  - matplotlib=3.7.1
-  - matplotlib-base=3.7.1
+  - markupsafe=2.1.3
+  - matplotlib=3.7.2
+  - matplotlib-base=3.7.2
   - mpg123=1.31.3
   - munkres=1.1.4
-  - mysql-common=8.0.32
-  - mysql-libs=8.0.32
-  - ncurses=6.3
+  - mysql-common=8.0.33
+  - mysql-libs=8.0.33
+  - ncurses=6.4
   - nspr=4.35
-  - nss=3.89
-  - numpy=1.24.3
+  - nss=3.92
+  - numpy=1.25.2
   - openjpeg=2.5.0
-  - openssl=3.1.0
+  - openssl=3.1.2
   - packaging=23.1
   - pcre=8.45
   - pcre2=10.40
   - pendulum=2.1.2
   - pillow=9.5.0
-  - pip=23.1.2
+  - pip=23.2.1
   - pixman=0.40.0
-  - pluggy=1.0.0
+  - pluggy=1.2.0
   - ply=3.11
   - psycopg2=2.9.3
   - pthread-stubs=0.4
@@ -142,13 +148,12 @@ dependencies:
   - pyasn1=0.4.8
   - pycparser=2.21
   - pynacl=1.5.0
-  - pyopenssl=23.1.1
   - pyparsing=3.0.9
-  - pyqt=5.15.7
-  - pyqt5-sip=12.11.0
+  - pyqt=5.15.9
+  - pyqt5-sip=12.12.2
   - pysocks=1.7.1
-  - pytest=7.3.1
-  - python=3.11.3
+  - pytest=7.4.0
+  - python=3.11.4
   - python-dateutil=2.8.2
   - python-json-logger=2.0.7
   - python_abi=3.11
@@ -156,32 +161,33 @@ dependencies:
   - qt-main=5.15.8
   - readline=8.2
   - requests=2.31.0
-  - setuptools=67.7.2
-  - sip=6.7.9
+  - setuptools=68.1.2
+  - sip=6.7.11
   - six=1.16.0
+  - sniffio=1.3.0
   - sqlalchemy=1.4.46
   - tk=8.6.12
   - toml=0.10.2
   - tomli=2.0.1
-  - tornado=6.3.2
+  - tornado=6.3.3
+  - typing_extensions=4.7.1
   - tzdata=2023c
-  - urllib3=1.26.15
+  - urllib3=2.0.4
   - uwsgi=2.0.21
   - visitor=0.1.3
-  - werkzeug=2.3.3
-  - wheel=0.40.0
+  - werkzeug=2.3.7
+  - wheel=0.41.1
   - wtforms=3.0.1
   - xcb-util=0.4.0
   - xcb-util-image=0.4.0
   - xcb-util-keysyms=0.4.0
   - xcb-util-renderutil=0.3.9
   - xcb-util-wm=0.4.1
-  - xkeyboard-config=2.38
   - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
+  - xorg-libice=1.1.1
+  - xorg-libsm=1.2.4
   - xorg-libx11=1.8.4
-  - xorg-libxau=1.0.9
+  - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
   - xorg-libxrender=0.9.10
@@ -191,10 +197,10 @@ dependencies:
   - xorg-xproto=7.0.31
   - xz=5.2.6
   - yaml=0.2.5
-  - zipp=3.15.0
+  - zipp=3.16.2
   - zlib=1.2.13
   - zstd=1.5.2
   - pip:
       - pastaplus-soh==2023.2.22
       - sniffer==2020.8.4
-prefix: /home/servilla/anaconda3/envs/dashboard
+prefix: /home/servilla/miniconda3/envs/dashboard
