--- a/environment.yml
+++ b/environment.yml
@@ -5,60 +5,70 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - anyio=4.0.0
-  - blinker=1.6.2
+  - alsa-lib=1.2.10
+  - anyio=4.1.0
+  - attr=2.5.1
+  - blinker=1.7.0
   - brotli=1.1.0
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2023.7.22
-  - certifi=2023.7.22
+  - ca-certificates=2023.11.17
+  - cairo=1.18.0
+  - certifi=2023.11.17
   - cffi=1.16.0
-  - charset-normalizer=3.3.0
+  - charset-normalizer=3.3.2
   - click=8.1.7
   - colorama=0.4.6
-  - contourpy=1.1.1
-  - cryptography=41.0.4
+  - contourpy=1.2.0
+  - cryptography=41.0.7
   - cycler=0.12.1
   - daiquiri=3.0.0
-  - dbus=1.13.18
+  - dbus=1.13.6
   - dnspython=2.4.2
-  - dominate=2.8.0
-  - email-validator=2.0.0.post2
-  - email_validator=2.0.0.post2
-  - exceptiongroup=1.1.3
+  - dominate=2.9.0
+  - email-validator=2.1.0.post1
+  - email_validator=2.1.0.post1
+  - exceptiongroup=1.2.0
   - expat=2.5.0
   - flask=2.3.3
   - flask-bootstrap=3.3.7.1
-  - flask-login=0.6.2
-  - flask-wtf=1.1.1
+  - flask-login=0.6.3
+  - flask-wtf=1.2.1
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
   - fontconfig=2.14.2
-  - fonttools=4.43.1
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.46.0
   - freetype=2.12.1
   - gettext=0.21.1
-  - giflib=5.2.1
-  - glib=2.78.0
-  - glib-tools=2.78.0
-  - greenlet=3.0.0
-  - gst-plugins-base=1.14.1
-  - gstreamer=1.14.1
+  - glib=2.78.3
+  - glib-tools=2.78.3
+  - graphite2=1.3.13
+  - greenlet=3.0.2
+  - gst-plugins-base=1.22.7
+  - gstreamer=1.22.7
   - h11=0.14.0
   - h2=4.1.0
+  - harfbuzz=8.3.0
   - hpack=4.0.0
-  - httpcore=1.0.0
+  - httpcore=1.0.2
   - hyperframe=6.0.1
-  - icu=58.2
-  - idna=3.4
-  - importlib-metadata=6.8.0
+  - icu=73.2
+  - idna=3.6
+  - importlib-metadata=7.0.0
   - iniconfig=2.0.0
   - itsdangerous=2.1.2
   - jansson=2.14
   - jinja2=3.1.2
-  - jpeg=9e
   - keyutils=1.6.1
   - kiwisolver=1.4.5
-  - krb5=1.20.1
-  - lcms2=2.15
+  - krb5=1.21.2
+  - lame=3.100
+  - lcms2=2.16
   - ld_impl_linux-64=2.40
   - ldap3=2.9.1
   - lerc=4.0.0
@@ -66,100 +76,127 @@ dependencies:
   - libbrotlicommon=1.1.0
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
+  - libcap=2.69
   - libcblas=3.9.0
-  - libclang=14.0.6
-  - libclang13=14.0.6
+  - libclang=15.0.7
+  - libclang13=15.0.7
   - libcups=2.3.3
-  - libdeflate=1.17
+  - libdeflate=1.19
   - libedit=3.1.20191231
   - libevent=2.1.12
   - libexpat=2.5.0
   - libffi=3.4.2
+  - libflac=1.4.3
   - libgcc-ng=13.2.0
+  - libgcrypt=1.10.3
   - libgfortran-ng=13.2.0
   - libgfortran5=13.2.0
-  - libglib=2.78.0
+  - libglib=2.78.3
   - libgomp=13.2.0
+  - libgpg-error=1.47
   - libiconv=1.17
+  - libjpeg-turbo=3.0.0
   - liblapack=3.9.0
-  - libllvm14=14.0.6
-  - libnsl=2.0.0
-  - libopenblas=0.3.24
+  - libllvm15=15.0.7
+  - libnsl=2.0.1
+  - libogg=1.3.4
+  - libopenblas=0.3.25
+  - libopus=1.3.1
   - libpng=1.6.39
-  - libpq=12.15
+  - libpq=16.1
+  - libsndfile=1.2.2
   - libsodium=1.0.18
-  - libsqlite=3.43.0
+  - libsqlite=3.44.2
   - libstdcxx-ng=13.2.0
-  - libtiff=4.5.0
+  - libsystemd0=255
+  - libtiff=4.6.0
   - libuuid=2.38.1
-  - libwebp=1.3.2
+  - libvorbis=1.3.7
   - libwebp-base=1.3.2
-  - libxcb=1.16
-  - libxkbcommon=1.0.3
-  - libxml2=2.10.4
+  - libxcb=1.15
+  - libxkbcommon=1.6.0
+  - libxml2=2.11.6
   - libxslt=1.1.37
   - libzlib=1.2.13
-  - lxml=4.9.2
+  - lxml=4.9.3
+  - lz4-c=1.9.4
   - markupsafe=2.1.3
-  - matplotlib=3.8.0
-  - matplotlib-base=3.8.0
+  - matplotlib=3.8.2
+  - matplotlib-base=3.8.2
+  - mpg123=1.32.3
   - munkres=1.1.4
-  - mysql=5.7.20
+  - mysql-common=8.0.33
+  - mysql-libs=8.0.33
   - ncurses=6.4
   - nspr=4.35
-  - nss=3.94
-  - numpy=1.26.0
+  - nss=3.96
+  - numpy=1.26.2
   - openjpeg=2.5.0
-  - openssl=3.1.3
+  - openssl=3.2.0
   - packaging=23.2
   - pcre=8.45
-  - pcre2=10.40
+  - pcre2=10.42
   - pendulum=2.1.2
   - pillow=10.0.1
-  - pip=23.2.1
+  - pip=23.3.1
+  - pixman=0.42.2
   - pluggy=1.3.0
   - ply=3.11
-  - psycopg2=2.9.3
+  - psycopg2=2.9.9
   - pthread-stubs=0.4
-  - pyasn1=0.5.0
+  - pulseaudio-client=16.1
+  - pyasn1=0.5.1
   - pycparser=2.21
   - pynacl=1.5.0
   - pyparsing=3.1.1
-  - pyqt=5.15.7
-  - pyqt5-sip=12.11.0
+  - pyqt=5.15.9
+  - pyqt5-sip=12.12.2
   - pysocks=1.7.1
-  - pytest=7.4.2
-  - python=3.11.6
+  - pytest=7.4.3
+  - python=3.11.7
   - python-dateutil=2.8.2
   - python-json-logger=2.0.7
   - python_abi=3.11
   - pytzdata=2020.1
-  - qt-main=5.15.2
-  - qt-webengine=5.15.9
-  - qtwebkit=5.212
+  - qt-main=5.15.8
   - readline=8.2
   - requests=2.31.0
   - setuptools=68.2.2
-  - sip=6.6.2
+  - sip=6.7.12
   - six=1.16.0
   - sniffio=1.3.0
   - sqlalchemy=1.4.46
-  - sqlite=3.43.0
   - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
   - tornado=6.3.3
-  - typing_extensions=4.8.0
+  - typing_extensions=4.9.0
   - tzdata=2023c
-  - urllib3=2.0.6
-  - uwsgi=2.0.21
+  - urllib3=2.1.0
+  - uwsgi=2.0.22
   - visitor=0.1.3
   - werkzeug=2.3.7
-  - wheel=0.41.2
+  - wheel=0.42.0
   - wtforms=3.0.1
+  - xcb-util=0.4.0
+  - xcb-util-image=0.4.0
+  - xcb-util-keysyms=0.4.0
+  - xcb-util-renderutil=0.3.9
+  - xcb-util-wm=0.4.1
+  - xkeyboard-config=2.40
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.1.1
+  - xorg-libsm=1.2.4
+  - xorg-libx11=1.8.7
   - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.3
-  - xz=5.4.2
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.11
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xf86vidmodeproto=2.3.1
+  - xorg-xproto=7.0.31
+  - xz=5.2.6
   - yaml=0.2.5
   - zipp=3.17.0
   - zlib=1.2.13
