--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.10
-  - anyio=4.1.0
+  - anyio=4.2.0
   - attr=2.5.1
   - blinker=1.7.0
   - brotli=1.1.0
@@ -25,8 +25,8 @@ dependencies:
   - cycler=0.12.1
   - daiquiri=3.0.0
   - dbus=1.13.6
-  - dnspython=2.4.2
-  - dominate=2.9.0
+  - dnspython=2.5.0
+  - dominate=2.9.1
   - email-validator=2.1.0.post1
   - email_validator=2.1.0.post1
   - exceptiongroup=1.2.0
@@ -42,15 +42,15 @@ dependencies:
   - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.46.0
+  - fonttools=4.47.2
   - freetype=2.12.1
   - gettext=0.21.1
   - glib=2.78.3
   - glib-tools=2.78.3
   - graphite2=1.3.13
-  - greenlet=3.0.2
-  - gst-plugins-base=1.22.7
-  - gstreamer=1.22.7
+  - greenlet=3.0.3
+  - gst-plugins-base=1.22.9
+  - gstreamer=1.22.9
   - h11=0.14.0
   - h2=4.1.0
   - harfbuzz=8.3.0
@@ -59,11 +59,11 @@ dependencies:
   - hyperframe=6.0.1
   - icu=73.2
   - idna=3.6
-  - importlib-metadata=7.0.0
+  - importlib-metadata=7.0.1
   - iniconfig=2.0.0
   - itsdangerous=2.1.2
   - jansson=2.14
-  - jinja2=3.1.2
+  - jinja2=3.1.3
   - keyutils=1.6.1
   - kiwisolver=1.4.5
   - krb5=1.21.2
@@ -100,7 +100,7 @@ dependencies:
   - libllvm15=15.0.7
   - libnsl=2.0.1
   - libogg=1.3.4
-  - libopenblas=0.3.25
+  - libopenblas=0.3.26
   - libopus=1.3.1
   - libpng=1.6.39
   - libpq=16.1
@@ -114,33 +114,34 @@ dependencies:
   - libvorbis=1.3.7
   - libwebp-base=1.3.2
   - libxcb=1.15
+  - libxcrypt=4.4.36
   - libxkbcommon=1.6.0
-  - libxml2=2.11.6
-  - libxslt=1.1.37
+  - libxml2=2.12.4
+  - libxslt=1.1.39
   - libzlib=1.2.13
-  - lxml=4.9.3
+  - lxml=5.1.0
   - lz4-c=1.9.4
-  - markupsafe=2.1.3
+  - markupsafe=2.1.4
   - matplotlib=3.8.2
   - matplotlib-base=3.8.2
-  - mpg123=1.32.3
+  - mpg123=1.32.4
   - munkres=1.1.4
   - mysql-common=8.0.33
   - mysql-libs=8.0.33
   - ncurses=6.4
   - nspr=4.35
-  - nss=3.96
-  - numpy=1.26.2
+  - nss=3.97
+  - numpy=1.26.3
   - openjpeg=2.5.0
   - openssl=3.2.0
   - packaging=23.2
   - pcre=8.45
   - pcre2=10.42
-  - pendulum=2.1.2
-  - pillow=10.0.1
-  - pip=23.3.1
-  - pixman=0.42.2
-  - pluggy=1.3.0
+  - pendulum=3.0.0
+  - pillow=10.2.0
+  - pip=23.3.2
+  - pixman=0.43.0
+  - pluggy=1.4.0
   - ply=3.11
   - psycopg2=2.9.9
   - pthread-stubs=0.4
@@ -152,28 +153,28 @@ dependencies:
   - pyqt=5.15.9
   - pyqt5-sip=12.12.2
   - pysocks=1.7.1
-  - pytest=7.4.3
+  - pytest=7.4.4
   - python=3.11.7
   - python-dateutil=2.8.2
   - python-json-logger=2.0.7
   - python_abi=3.11
-  - pytzdata=2020.1
   - qt-main=5.15.8
   - readline=8.2
   - requests=2.31.0
-  - setuptools=68.2.2
+  - setuptools=69.0.3
   - sip=6.7.12
   - six=1.16.0
   - sniffio=1.3.0
   - sqlalchemy=1.4.46
+  - time-machine=2.13.0
   - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
   - tornado=6.3.3
   - typing_extensions=4.9.0
-  - tzdata=2023c
+  - tzdata=2023d
   - urllib3=2.1.0
-  - uwsgi=2.0.22
+  - uwsgi=2.0.23
   - visitor=0.1.3
   - werkzeug=2.3.8
   - wheel=0.42.0
@@ -201,4 +202,7 @@ dependencies:
   - zipp=3.17.0
   - zlib=1.2.13
   - zstd=1.5.5
+  - pip:
+      - pastaplus-soh==2023.2.22
+      - sniffer==2020.8.4
 prefix: /home/servilla/miniconda3/envs/dashboard
