--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-anyio==4.1.0
+anyio==4.2.0
 blinker==1.7.0
 Brotli==1.1.0
 certifi==2023.11.17
@@ -10,38 +10,39 @@ contourpy==1.2.0
 cryptography==41.0.7
 cycler==0.12.1
 daiquiri==3.0.0
-dnspython==2.4.2
-dominate==2.9.0
+dnspython==2.5.0
+dominate==2.9.1
 email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 Flask==2.3.3
 Flask-Bootstrap==3.3.7.1
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
-fonttools==4.46.0
-greenlet==3.0.2
+fonttools==4.47.2
+greenlet==3.0.3
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.2
 hyperframe==6.0.1
 idna==3.6
-importlib-metadata==7.0.0
+importlib-metadata==7.0.1
 iniconfig==2.0.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 kiwisolver==1.4.5
 ldap3==2.9.1
-lxml==4.9.3
-MarkupSafe==2.1.3
+lxml==5.1.0
+MarkupSafe==2.1.4
 matplotlib==3.8.2
 munkres==1.1.4
-numpy==1.26.2
+numpy==1.26.3
 packaging==23.2
-pendulum==2.1.2
-Pillow==10.0.1
-pip==23.3.1
-pluggy==1.3.0
+pastaplus.soh==2023.2.22
+pendulum==3.0.0
+pillow==10.2.0
+pip==23.3.2
+pluggy==1.4.0
 ply==3.11
 psycopg2==2.9.9
 pyasn1==0.5.1
@@ -51,22 +52,23 @@ pyparsing==3.1.1
 PyQt5==5.15.9
 PyQt5-sip==12.12.2
 PySocks==1.7.1
-pytest==7.4.3
+pytest==7.4.4
 python-dateutil==2.8.2
 python-json-logger==2.0.7
-pytzdata==2020.1
 requests==2.31.0
-setuptools==68.2.2
+setuptools==69.0.3
 sip==6.7.12
 six==1.16.0
+sniffer==2020.8.4
 sniffio==1.3.0
 SQLAlchemy==1.4.46
+time-machine==2.13.0
 toml==0.10.2
 tomli==2.0.1
 tornado==6.3.3
 typing_extensions==4.9.0
 urllib3==2.1.0
-uWSGI==2.0.22
+uWSGI==2.0.23
 visitor==0.1.3
 Werkzeug==2.3.8
 wheel==0.42.0
