--- a/environment.yml
+++ b/environment.yml
@@ -6,26 +6,26 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - alsa-lib=1.2.10
-  - anyio=4.2.0
+  - anyio=4.3.0
   - attr=2.5.1
   - blinker=1.7.0
   - brotli=1.1.0
   - brotli-bin=1.1.0
   - brotli-python=1.1.0
   - bzip2=1.0.8
-  - ca-certificates=2023.11.17
+  - ca-certificates=2024.2.2
   - cairo=1.18.0
-  - certifi=2023.11.17
+  - certifi=2024.2.2
   - cffi=1.16.0
   - charset-normalizer=3.3.2
   - click=8.1.7
   - colorama=0.4.6
   - contourpy=1.2.0
-  - cryptography=41.0.7
+  - cryptography=42.0.4
   - cycler=0.12.1
   - daiquiri=3.0.0
   - dbus=1.13.6
-  - dnspython=2.5.0
+  - dnspython=2.4.2
   - dominate=2.9.1
   - email-validator=2.1.0.post1
   - email_validator=2.1.0.post1
@@ -42,11 +42,11 @@ dependencies:
   - fontconfig=2.14.2
   - fonts-conda-ecosystem=1
   - fonts-conda-forge=1
-  - fonttools=4.47.2
+  - fonttools=4.49.0
   - freetype=2.12.1
   - gettext=0.21.1
-  - glib=2.78.3
-  - glib-tools=2.78.3
+  - glib=2.78.4
+  - glib-tools=2.78.4
   - graphite2=1.3.13
   - greenlet=3.0.3
   - gst-plugins-base=1.22.9
@@ -55,7 +55,7 @@ dependencies:
   - h2=4.1.0
   - harfbuzz=8.3.0
   - hpack=4.0.0
-  - httpcore=1.0.2
+  - httpcore=1.0.4
   - hyperframe=6.0.1
   - icu=73.2
   - idna=3.6
@@ -91,7 +91,7 @@ dependencies:
   - libgcrypt=1.10.3
   - libgfortran-ng=13.2.0
   - libgfortran5=13.2.0
-  - libglib=2.78.3
+  - libglib=2.78.4
   - libgomp=13.2.0
   - libgpg-error=1.47
   - libiconv=1.17
@@ -102,11 +102,11 @@ dependencies:
   - libogg=1.3.4
   - libopenblas=0.3.26
   - libopus=1.3.1
-  - libpng=1.6.39
-  - libpq=16.1
+  - libpng=1.6.42
+  - libpq=16.2
   - libsndfile=1.2.2
   - libsodium=1.0.18
-  - libsqlite=3.44.2
+  - libsqlite=3.45.1
   - libstdcxx-ng=13.2.0
   - libsystemd0=255
   - libtiff=4.6.0
@@ -116,31 +116,31 @@ dependencies:
   - libxcb=1.15
   - libxcrypt=4.4.36
   - libxkbcommon=1.6.0
-  - libxml2=2.12.4
+  - libxml2=2.12.5
   - libxslt=1.1.39
   - libzlib=1.2.13
   - lxml=5.1.0
   - lz4-c=1.9.4
-  - markupsafe=2.1.4
-  - matplotlib=3.8.2
-  - matplotlib-base=3.8.2
+  - markupsafe=2.1.5
+  - matplotlib=3.8.3
+  - matplotlib-base=3.8.3
   - mpg123=1.32.4
   - munkres=1.1.4
   - mysql-common=8.0.33
   - mysql-libs=8.0.33
   - ncurses=6.4
   - nspr=4.35
-  - nss=3.97
-  - numpy=1.26.3
+  - nss=3.98
+  - numpy=1.26.4
   - openjpeg=2.5.0
-  - openssl=3.2.0
+  - openssl=3.2.1
   - packaging=23.2
   - pcre=8.45
   - pcre2=10.42
   - pendulum=3.0.0
   - pillow=10.2.0
-  - pip=23.3.2
-  - pixman=0.43.0
+  - pip=24.0
+  - pixman=0.43.2
   - pluggy=1.4.0
   - ply=3.11
   - psycopg2=2.9.9
@@ -153,15 +153,15 @@ dependencies:
   - pyqt=5.15.9
   - pyqt5-sip=12.12.2
   - pysocks=1.7.1
-  - pytest=7.4.4
-  - python=3.11.7
+  - pytest=8.0.1
+  - python=3.11.8
   - python-dateutil=2.8.2
   - python-json-logger=2.0.7
   - python_abi=3.11
   - qt-main=5.15.8
   - readline=8.2
   - requests=2.31.0
-  - setuptools=69.0.3
+  - setuptools=69.1.0
   - sip=6.7.12
   - six=1.16.0
   - sniffio=1.3.0
@@ -170,21 +170,21 @@ dependencies:
   - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
-  - tornado=6.3.3
+  - tornado=6.4
   - typing_extensions=4.9.0
-  - tzdata=2023d
-  - urllib3=2.1.0
+  - tzdata=2024a
+  - urllib3=2.2.1
   - uwsgi=2.0.23
   - visitor=0.1.3
   - werkzeug=2.3.8
   - wheel=0.42.0
-  - wtforms=3.0.1
+  - wtforms=3.1.2
   - xcb-util=0.4.0
   - xcb-util-image=0.4.0
   - xcb-util-keysyms=0.4.0
   - xcb-util-renderutil=0.3.9
   - xcb-util-wm=0.4.1
-  - xkeyboard-config=2.40
+  - xkeyboard-config=2.41
   - xorg-kbproto=1.0.7
   - xorg-libice=1.1.1
   - xorg-libsm=1.2.4
@@ -202,7 +202,4 @@ dependencies:
   - zipp=3.17.0
   - zlib=1.2.13
   - zstd=1.5.5
-  - pip:
-      - pastaplus-soh==2023.2.22
-      - sniffer==2020.8.4
 prefix: /home/servilla/miniconda3/envs/dashboard
